--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -1,68 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Resource Files\MinHook">
-      <UniqueIdentifier>{80e7481e-d4ef-4ec5-8285-779d8bb7b8ee}</UniqueIdentifier>
+    <Filter Include="Header Files\Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MinHook\src\buffer.c">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClCompile>
-    <ClCompile Include="MinHook\src\hook.c">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClCompile>
-    <ClCompile Include="MinHook\src\trampoline.c">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClCompile>
-    <ClCompile Include="MinHook\src\hde\hde32.c">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClCompile>
-    <ClCompile Include="MinHook\src\hde\hde64.c">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="d3d11.def">
-      <Filter>Source Files</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="MinHook\src\buffer.h">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClInclude>
-    <ClInclude Include="MinHook\src\trampoline.h">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClInclude>
-    <ClInclude Include="MinHook\src\hde\hde32.h">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClInclude>
-    <ClInclude Include="MinHook\src\hde\hde64.h">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClInclude>
-    <ClInclude Include="MinHook\src\hde\pstdint.h">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClInclude>
-    <ClInclude Include="MinHook\src\hde\table32.h">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClInclude>
-    <ClInclude Include="MinHook\src\hde\table64.h">
-      <Filter>Resource Files\MinHook</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
